@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1720 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for validating <xsd:ID>s during marshalling.
+       Details: http://jira.codehaus.org/browse/CASTOR-1720
+       (Werner - 20061215)
+
 XML:   Resolved issue CASTOR-1737 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added new ClassNameCRStrategy that simply logs such conflicts without possibility of 
        user intervention.
